Bug 490276 - [Designer, C++ codegen] Test plugin for C++ code generation is (almost) empty in new repository Change-Id: Ib5ac0429f4feff7ac36a3eed45024cf0b51b2aa5