@@ -4,9 +4,46 @@
 	<parent>
 		<groupId>org.eclipse.papyrus.designer</groupId>
 		<artifactId>org.eclipse.papyrus.designer.languages.cpp</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.eclipse.papyrus.designer.languages.cpp.tests</artifactId>
+	<artifactId>org.eclipse.papyrus.designer.languages.cpp.codegen.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<description>This module contains tests for the C/C++ code generation</description>
+	
+	 <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <testClass>${testSuiteClass}</testClass>
+                    <useUIHarness>true</useUIHarness>
+                    <useUIThread>true</useUIThread>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512M</argLine>
+                    <appArgLine>-testConfig=${testConfig}</appArgLine>
+                    <product>org.eclipse.sdk.ide</product>
+                    <skipTests>${skipAllTests}</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <dependency-resolution>
+                        <extraRequirements>
+                            <requirement>
+                                <type>eclipse-feature</type>
+                                <id>org.eclipse.papyrus.sdk.feature</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                        </extraRequirements>
+                    </dependency-resolution>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+	
 </project>
